--- a/index.html
+++ b/index.html
@@ -4,6 +4,122 @@
   catch.
 </p>
 
-<script src="./src/00-objectball.js"></script>
+<script src="./src/00-objectball.js">
+  const gameObject = {
+    home : {
+      teamName: "Brooklyn Nets",
+      colors : "Black, White",
+      players : {
+        "AlanAnderson" : {
+          number : "0",
+          shoe : "16",
+          points : "22",
+          rebounds : "12",
+          assists : "12",
+          steals : "3",
+          blocks : "1",
+          slamDunks : "1",
+        },
+        "ReggieEvans" : {
+          number : "30",
+          shoe : "14",
+          points : "12",
+          rebounds : "12",
+          assists : "12",
+          steals : "12",
+          blocks : "12",
+          slamDunks : "7"
+        },
+        "BrookLopez" : {
+          number : "11",
+          shoe : "17",
+          points : "17",
+          rebounds: "19",
+          assists : "10",
+          steals : "3",
+          blocks : "1",
+          slamDunks : "15",
+        },
+          "Mason Plumlee" : {
+            number : "1",
+            shoe : "19",
+            points : "26",
+            rebounds : "12",
+            assists : "6",
+            steals : "3",
+            blocks : "8",
+            slamDunks : "5"
+          },
+          "Jason Terry" : {
+            number : "31",
+            shoe : "15",
+            points : "19",
+            rebounds : "2",
+            assists : "2",
+            steals : "4",
+            blocks : "11",
+            slamDunks : "1",
+          },
+      },
+    },
+    away : {
+      teamName : "Charlotte Hornets",
+      colors: "Turquoise, Purple",
+      players : {
+        "JeffAdrien" : {
+            number : "4",
+            shoe : "18",
+            points : "10",
+            rebounds : "1",
+            assists : "1",
+            steals : "2",
+            blocks : "7",
+            slamDunks : "2",
+        },
+        "BismakBiyombo" : {
+            number : "0",
+            shoe : "16",
+            points : "12",
+            rebounds : "4",
+            assists : "7",
+            steals : "7",
+            blocks : "15",
+            slamDunks : "10",
+        },
+        "DeSagnaDiop" :{
+          number : "2",
+            shoe : "14",
+            points : "24",
+            rebounds : "12",
+            assists : "12",
+            steals : "4",
+            blocks : "5",
+            slamDunks : "5",
+        },
+        "BenGordon" : {
+          number : "33",
+            shoe : "15",
+            points : "6",
+            rebounds : "12",
+            assists : "12",
+            steals : "22",
+            blocks : "5",
+            slamDunks : "12",
+        },
+         "BrendanHaywood" : {
+          number : "33",
+            shoe : "15",
+            points : "6",
+            rebounds : "12",
+            assists : "12",
+            steals : "22",
+            blocks : "5",
+            slamDunks : "12",
+         }
+      }
+    }
+  }
+</script>
+
 <script src="./src/01-simple-debug.js"></script>
 <!-- <script src="./src/02-advanced-debug.js"></script> -->
